--- a/src/components/RecordSound/RecordSound.module.scss
+++ b/src/components/RecordSound/RecordSound.module.scss
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
 
+body {
+	overflow: hidden;
+}
+
 %pseudo {
 	content: '';
 	display: inline-block;
@@ -7,8 +11,8 @@
 
 %absolute-center {
 	position: absolute;
-	top: 50%;
-	left: 50%;
+	top: 75%;
+	left: 35%;
 }
 
 $frame-bg: linear-gradient(45deg, #7B1FA2 50%, #F06292 90%);
@@ -52,6 +56,7 @@ $mic-color: linear-gradient(45deg, #E0E0E0 50%, white 50%);
 			@extend %pseudo;
 			@extend %absolute-center;
 			top: 10%;
+			left: 50%;
 			background: $frame-bg;
 			width: 8px;
 			height: 20px;
@@ -82,21 +87,31 @@ $mic-color: linear-gradient(45deg, #E0E0E0 50%, white 50%);
 	opacity: 0;
 	transition: all 0.3s 0s ease;
 }
+
 .round {
+	position: absolute;
 	$round-size: $mic-size * 0.15;
-	@extend %absolute-center;
 	background: white;
 	width: $round-size;
 	height: $round-size;
 	border-radius: 50%;
 	margin-top: $round-size * -0.5;
+	margin-right: $round-size * -0.5;
 	margin-left: $round-size * -0.5;
 	animation: recording 1s ease-in-out infinite;
 	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
-	&:first-child { left: 20%; }
+	&:first-child {
+		left: 50%; 
+		top: 50%;
+	}
+	&:nth-child(2) {
+		left: 25%; 
+		top: 50%;
+	}
 	&:nth-child(2) { animation-delay: 0.15s; }
 	&:last-child {
-		left: 80%;
+		left: 75%;
+		top: 50%;
 		animation-delay: 0.3s;
 	}
 }
@@ -160,7 +175,251 @@ $mic-color: linear-gradient(45deg, #E0E0E0 50%, white 50%);
 	}
 }
 
+.elementToFadeInAndOut {
+    opacity: 1;
+    animation: fade 2s linear;
+}
+
+
+@keyframes fade {
+  0%, 30% { opacity: 0 }
+
+}
 
 .pg {
-	margin-top: 150px;
+	position: absolute;
+	top: 600px;
+	left: 490px;
 }
+
+.stoppedBar {
+	position: absolute;
+	top: 530px;
+	left: 650px;
+	height: 15px;
+	width: 600px;
+	background: linear-gradient(45deg, #3af9da 25%, #7B1FA2 50%, #F06292 90%);
+	border-radius: 8px;
+}
+
+.cssAnimation {
+	overflow: hidden;
+	padding-top: 560px;
+	padding-left: 350px;
+}
+
+.cssAnimation .wrapper {
+	position: relative;
+	width: 500px;
+	height: 300px;
+	padding-top: 28%;
+	padding-left: 100px;
+	overflow: hidden;
+}
+
+.cssAnimation .wrapper div {
+	position: absolute;
+	height: 34%;
+	width: 3%;
+	top: 30%;
+	border-radius: 8px;
+}
+
+.cssAnimation .wrapper div:nth-of-type(1) {
+	animation: prop 17s 0.000s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(2) {
+	animation: prop 17s -16.227s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(3) {
+	animation: prop 17s -15.455s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(4) {
+	animation: prop 17s -14.682s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(5) {
+	animation: prop 17s -13.909s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(6) {
+	animation: prop 17s -13.136s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(7) {
+	animation: prop 17s -12.364s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(8) {
+	animation: prop 17s -11.591s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(9) {
+	animation: prop 17s 10.818s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(10) {
+	animation: prop 17s -10.045s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(11) {
+	animation: prop 17s -9.273s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(12) {
+	animation: prop 17s -8.500s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(13) {
+	animation: prop 17s -7.727s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(14) {
+	animation: prop 17s -6.955s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(15) {
+	animation: prop 17s -6.182s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(16) {
+	animation: prop 17s -5.409s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(17) {
+	animation: prop 17s -4.636s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(18) {
+	animation: prop 17s -3.864s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(19) {
+	animation: prop 17s -3.091s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(20) {
+	animation: prop 17s -2.318s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(21) {
+	animation: prop 17s -1.545s linear infinite;
+}
+
+.cssAnimation .wrapper div:nth-of-type(22) {
+	animation: prop 17s -0.773s linear infinite;
+}
+
+
+@keyframes prop {
+	0% {
+		background: red;
+		height: 34%;
+		margin-top: -17%;
+		left: 0%;
+	}
+
+	5% {
+		background: #9337fe;
+	}
+
+	10% {
+		height: 10%;
+		margin-top: -5%;
+		background: #c532fc;
+	}
+
+	15% {
+		background: #f689f8;
+	}
+
+	20% {
+		height: 34%;
+		margin-top: -17%;
+		background: #3af9da;
+	}
+
+	25% {
+		background: #ff2f8d;
+	}
+
+	30% {
+		height: 10%;
+		margin-top: -5%;
+		background: #54e678;
+	}
+
+	35% {
+		background: #dc5245;
+	}
+
+	40% {
+		height: 34%;
+		margin-top: -17%;
+		background: #3af9da;
+	}
+
+	45% {
+		background: #f8b435;
+	}
+
+	50% {
+		height: 10%;
+		margin-top: -5%;
+		background: #54e678;
+	}
+
+	55% {
+		background: #e0ff3b;
+	}
+
+	60% {
+		height: 34%;
+		margin-top: -17%;
+		background: #3af9da;
+	}
+
+	65% {
+		background: #46f443;
+	}
+
+	70% {
+		height: 10%;
+		margin-top: -5%;
+		background: #54e678;
+	}
+
+	75% {
+		background: #4df3a9;
+	}
+
+	80% {
+		height: 34%;
+		margin-top: -17%;
+		background: #3af9da;
+	}
+
+	85% {
+		background: #36ebf4;
+	}
+
+	90% {
+		height: 10%;
+		margin-top: -5%;
+		background: #3db3f3;
+	}
+
+	95% {
+		background: #3c82f1;
+	}
+
+	100% {
+		left: 100%;
+		height: 34%;
+		margin-top: -17%;
+		background: #5b38ee;
+	}
+} 
