--- a/src/components/RecordSound/RecordSound.module.scss
+++ b/src/components/RecordSound/RecordSound.module.scss
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:700,300');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
 body {
 	overflow: hidden;
@@ -32,6 +33,16 @@ svg {
 		stroke-width: 3;
 		fill: transparent;
 	}
+}
+
+.visible {
+	display: none;
+}
+
+.nonVisible {
+	display: block;
+	width: 500px;
+	height: 300px;
 }
 
 $mic-size: 85px;
@@ -188,13 +199,42 @@ $mic-color: linear-gradient(45deg, #E0E0E0 50%, white 50%);
 
 .pg {
 	position: absolute;
+	color: rgb(255, 255, 255);
 	top: 600px;
 	left: 490px;
 }
 
+.textBox p {
+    top: 30%;  
+    width: 24em;
+	font-size: 24px;
+	font-family: 'Roboto Mono', monospace;
+    margin: 0 auto;
+    border-right: 2px solid rgba(255,255,255,.75);
+    font-size: 180%;
+    white-space: nowrap;
+    overflow: hidden;
+    transform: translateY(-410%); 
+}
+
+.animTypewriter {
+	animation: typewriter 3s steps(44) 0.5s 1 normal both,
+	blinkTextCursor 1000ms steps(44) infinite normal;
+}
+
+@keyframes typewriter{
+	from{width: 0;}
+	to{width: 100%;}
+}
+
+@keyframes blinkTextCursor{
+	from{border-right-color: rgba(255,255,255,.75);}
+	to{border-right-color: transparent;}
+}
+
 .stoppedBar {
 	position: absolute;
-	top: 530px;
+	top: 535px;
 	left: 650px;
 	height: 15px;
 	width: 600px;
