--- a/src/components/RecordSound/RecordSound.module.scss
+++ b/src/components/RecordSound/RecordSound.module.scss
@@ -41,9 +41,12 @@ svg {
 
 .nonVisible {
 	display: block;
+	position: absolute;
 	width: 500px;
 	height: 300px;
+	z-index: 100;
 }
+
 
 $mic-size: 85px;
 $mic-color: linear-gradient(45deg, #E0E0E0 50%, white 50%);
