--- a/src/components/Home/HomeStyles.module.scss
+++ b/src/components/Home/HomeStyles.module.scss
@@ -87,3 +87,33 @@ span a:hover {
 .justTry {
     margin: 165px 0 0 140px;
 }
+
+$text: #fff;
+$link: #e34234;
+$link-hover: #ba160c;
+
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
+
+#particlesJs {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%,-50%);
+  color: $text;
+  max-width: 90%;
+  padding: 2em 3em;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 0px 0px 2px #131415;
+  font-family: 'Open Sans', sans-serif;
+}
