--- a/src/components/Navigation/NavigationStyles.module.css
+++ b/src/components/Navigation/NavigationStyles.module.css
@@ -12,6 +12,7 @@ nav {
     font-size: 0;
     font-family: 'Open Sans', sans-serif;
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 1);
+    z-index: 100;
 }
 
 nav a {
