--- a/src/components/Navigation/NavigationStyles.module.scss
+++ b/src/components/Navigation/NavigationStyles.module.scss
@@ -5,7 +5,7 @@ nav {
     top: 10px;
     left: 50%;
     transform: translate(-50%, 0);
-    width: 420px;
+    width: 530px;
     height: 50px;
     background: #000000;
     border-radius: 8px;
@@ -41,7 +41,14 @@ nav a:nth-child(1) {
     width: 100px;
 }
 
-nav .startHome, a:nth-child(1):hover~.animation {
+nav a:nth-child(1):hover~.animation {
+    width: 100px;
+    left: 0;
+}
+
+.animation1 {
+    @extend .animation;
+
     width: 100px;
     left: 0;
 }
@@ -55,11 +62,25 @@ nav a:nth-child(2):hover~.animation {
     left: 100px;
 }
 
+.animation2 {
+    @extend .animation;
+
+    width: 110px;
+    left: 100px;
+}
+
 nav a:nth-child(3) {
     width: 100px;
 }
 
 nav a:nth-child(3):hover~.animation {
+    width: 100px;
+    left: 210px;
+}
+
+.animation3 {
+    @extend .animation;
+
     width: 100px;
     left: 210px;
 }
@@ -71,4 +92,27 @@ nav a:nth-child(4) {
 nav a:nth-child(4):hover~.animation {
     width: 110px;
     left: 310px;
+}
+
+.animation4 {
+    @extend .animation;
+    
+    width: 110px;
+    left: 310px;
+}
+
+nav a:nth-child(5) {
+    width: 110px;
+}
+
+nav a:nth-child(5):hover~.animation {
+    width: 110px;
+    left: 420px;
+}
+
+.animation5 {
+    @extend .animation;
+    
+    width: 110px;
+    left: 420px;
 }
