--- a/src/components/Home/HomeStyles.module.scss
+++ b/src/components/Home/HomeStyles.module.scss
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     width: 100%;
     height: 100vh;
@@ -14,7 +18,7 @@ body {
     );  
     animation: AnimateBG 20s ease infinite;
 }
-  
+
 @keyframes AnimateBG { 
     0%{background-position:0% 50%}
     50%{background-position:100% 50%} // first param 50 for mobile
@@ -116,4 +120,128 @@ canvas {
   background: rgba(0, 0, 0, 0.4);
   text-shadow: 0px 0px 2px #131415;
   font-family: 'Open Sans', sans-serif;
+}
+
+@media (max-width: 600px), (max-width: 920px) {
+    @keyframes AnimateBG { 
+        50%{background-position:50% 50%}
+    }
+
+    .options {
+        display: block;
+        margin-top: 10vh;
+        margin-left: 1%;
+    }
+
+    .tryFreeSection {
+        position: absolute;
+        top: 100vh;
+    }
+    
+    .options div {
+        margin-top: -400px;
+        width: 250px;
+        height: 250px;
+    }
+    
+    .options h2 {
+        position: absolute;
+        text-align: center;
+        width: 250px;
+        top: 33px;
+        left: -55px;
+        right: -69px;
+    }
+
+    .tryFreeSection h2 {
+        position: absolute;
+        text-align: center;
+        width: 150px;
+        top: 38px;
+        left: -39px;
+        right: -69px;
+    }
+    
+    .options p {
+        left: -10px;
+    }
+    
+    .tryFreeSection p {
+        top: 65px;
+        left: -25px;
+    }
+    
+    .login {
+        margin: 95px 0 0 123px;
+    }
+    
+    .register {
+        margin: 5px 0 0 123px;
+    }
+    
+    .justTry {
+        margin: 90px 0 0 80px;
+    }
+
+    @media (max-height: 1370px) and (min-height: 1050px) {
+        .options div {
+            width: 30vh;
+            height: 30vh;
+        }
+
+        .options p {
+            top: 10vh;
+            left: -3vh;
+        }
+        
+        .tryFreeSection p {
+            top: 9vh;
+            left: -3vh;
+        }
+
+        .options h2 {
+            top: 70px;
+            left: -18px;
+            right: -69px;
+        }
+    
+        .tryFreeSection h2 {
+            top: 70px;
+            left: -10px;
+            right: -69px;
+        }
+
+        .login {
+            margin: 15vh 0 0 123px;
+        }
+        
+        .register {
+            margin: 5px 0 0 123px;
+        }
+        
+        .justTry {
+            margin: 15vh 0 0 8.5vh;
+        }
+    }
+
+    @media (max-height: 860px) {
+        .options div {
+            margin-top: -300px;
+        }
+    
+        .tryFreeSection {
+            position: absolute;
+            top: 105vh;
+        }
+    }
+    
+    @media (max-height: 730px) {
+        .options div {
+            margin-top: -20vh;
+        }
+    
+        canvas {
+            height: 160vh;
+        }
+    }
 }
