--- a/src/components/Navigation/NavigationStyles.module.scss
+++ b/src/components/Navigation/NavigationStyles.module.scss
@@ -116,3 +116,86 @@ nav a:nth-child(5):hover~.animation {
     width: 110px;
     left: 420px;
 }
+
+@media (max-width: 600px) {
+    nav {
+        width: 330px;
+    }
+
+    nav a:nth-child(1) {
+        width: 60px;
+    }
+
+    nav a:nth-child(1):hover~.animation {
+        width: 60px;
+    }
+
+    .animation1 {
+        @extend .animation;
+        width: 60px;
+    }
+
+    nav a:nth-child(2) {
+        width: 60px;
+    }
+
+    nav a:nth-child(2):hover~.animation {
+        width: 60px;
+        left: 60px;
+    }
+
+    .animation2 {
+        @extend .animation;
+
+        width: 60px;
+        left: 60px;
+    }
+
+    nav a:nth-child(3) {
+        width: 60px;
+    }
+
+    nav a:nth-child(3):hover~.animation {
+        width: 60px;
+        left: 120px;
+    }
+
+    .animation3 {
+        @extend .animation;
+
+        width: 60px;
+        left: 120px;
+    }
+
+    nav a:nth-child(4) {
+        width: 75px;
+    }
+
+    nav a:nth-child(4):hover~.animation {
+        width: 75px;
+        left: 180px;
+    }
+
+    .animation4 {
+        @extend .animation;
+        
+        width: 75px;
+        left: 180px;
+    }
+
+    nav a:nth-child(5) {
+        width: 75px;
+    }
+
+    nav a:nth-child(5):hover~.animation {
+        width: 75px;
+        left: 255px;
+    }
+
+    .animation5 {
+        @extend .animation;
+        
+        width: 75px;
+        left: 255px;
+    }
+}
