--- a/src/components/VideoPlay/VideoPlay.module.css
+++ b/src/components/VideoPlay/VideoPlay.module.css
@@ -1,6 +1,14 @@
 video {
     position: absolute;
     left: -80px;
-    top: 47vh; 
+    bottom: 0; 
     width: 700px;
+}
+
+@media (max-width: 450px) {
+    video {
+        position: relative;
+        width: 600px;
+        margin-bottom: -4px;
+    }
 }
