--- a/src/components/Home/HomeStyles.module.scss
+++ b/src/components/Home/HomeStyles.module.scss
@@ -168,11 +168,11 @@ canvas {
     }
     
     .login {
-        margin: 95px 0 0 123px;
+        margin: 150% -130% 0 130%;
     }
     
     .register {
-        margin: 5px 0 0 123px;
+        margin: 5px -130% 0 130%;
     }
     
     .justTry {
