--- a/src/components/RecordSound/RecordSound.module.scss
+++ b/src/components/RecordSound/RecordSound.module.scss
@@ -42,12 +42,12 @@ svg {
 .nonVisible {
 	display: block;
 	position: absolute;
-	left: 200px;
-	width: 500px;
-	height: 300px;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 80%;
 	z-index: 100;
 }
-
 
 $mic-size: 85px;
 $mic-color: linear-gradient(45deg, #E0E0E0 50%, white 50%);
